<resources>
    <string name="app_name">Do Things</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_edit_title">Title</string>
    <string name="input_edit_title_hint">write title  here</string>
    <string name="input_edit_description_hint">write description here</string>
    <string name="input_edit_desc_title">Description</string>
    <string name="input_edit_date_title">Deadline date</string>
    <string name="input_edit_date_hint">chose dealine date</string>
    <string name="input_edit_urgent_title">Choose Urgent Level</string>
    <string name="input_edit_urgent_hint">choose urgent level</string>
    <string name="popup_title_default">TITLE</string>
    <string name="input_edit_save_btn">save</string>
    <string name="input_edit_level_very_urgent">Very Urgent</string>
    <string name="input_edit_level_urgent">Urgent</string>
    <string name="input_edit_level_so_so">So So</string>
    <string name="input_edit_level_not_importan">Not Important</string>
    <string name="input_edit_date_description">Chose Date For Deadline The Todo</string>
    <string name="db_drop">DROP TABLE IF EXISTS </string>
    <string name="main_btn_pref_label">prev</string>
    <string name="main_next_btn_label">next</string>
    <string name="today_label">Today</string>
    <string name="date_example_label">Wednesday 25,Dec 2019</string>
    <string name="empty_label">Nothing to do on This Date</string>
    <string name="input_edit_time_title">Starting Time</string>
    <string name="input_edit_time_hint">23:59</string>
</resources>
