<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/headerImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="@null"
                app:cardCornerRadius="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/header_bg2">

                    <RelativeLayout
                        android:id="@+id/header_linearlayout_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="42dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <TextView

                            android:id="@+id/tv_choosenday_title_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/questrial"
                            android:gravity="center"
                            android:text="@string/date_example_label"
                            android:textColor="#FFFFFF"
                            android:textSize="22sp"

                            />

                        <ImageButton
                            android:id="@+id/header_prev_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="32dp"
                            android:layout_marginRight="15dp"
                            android:layout_toLeftOf="@id/header_next_btn"
                            android:background="@null"
                            android:src="@drawable/pref_btn" />

                        <ImageButton

                            android:id="@+id/header_next_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:src="@drawable/next_btn" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/relativelayout_month_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/header_linearlayout_title"
                        android:layout_marginBottom="10dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview_month_year"
                            android:layout_width="62dp"
                            android:layout_height="13dp"
                            android:layout_centerInParent="true"
                            android:alpha="0.6"
                            android:elevation="5dp"
                            app:cardBackgroundColor="@android:color/white"
                            app:cardCornerRadius="6dp" />


                        <TextView
                            android:id="@+id/tv_current_month_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="10dp"
                            android:fontFamily="@font/questrial"
                            android:text="Jan , 2019"
                            android:textColor="@android:color/white"
                            android:textSize="10sp" />

                    </RelativeLayout>

                    <include
                        layout="@layout/date_column"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativelayout_month_year"
                        android:layout_centerInParent="true" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_choosenday_title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/questrial"
                android:text="@string/today_label"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerImageView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todo_show_recylerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="1" />

                <TextView
                    android:id="@+id/tv_nothingtodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="176dp"
                    android:text="@string/empty_label"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/todo_show_recylerview" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>



